--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="keywords" content="Bootstrap, Landing page, Template, Registration, Landing">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="author" content="Grayrids">
-    <title>Essence - Bootstrap 4 Template</title>
+    <title>Ecumenic Cultural operations</title>
+    <link rel="icon" href="favicon.png" sizes="16x16" type="image/png">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -29,7 +30,7 @@
     <header id="slider-area">  
       <nav class="navbar navbar-expand-md fixed-top scrolling-navbar bg-white">
         <div class="container">          
-          <a class="navbar-brand" href="index.html"><span class="lni-bulb"></span>ESSENCE</a>
+          <a class="navbar-brand" href="index.html"><span class="lni-bulb"></span>Ecumenic Cultural Operations</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <i class="lni-menu"></i>
           </button>
