--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="author" content="Grayrids">
     <title>Ecumenic Cultural operations</title>
-    
+    <link rel="icon" href="favicon.png" sizes="16x16" type="image/png">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/line-icons.css">
@@ -21,26 +22,29 @@
     <link rel="stylesheet" href="css/menu_sideslide.css">
     <link rel="stylesheet" href="css/main.css">    
     <link rel="stylesheet" href="css/responsive.css">
-    <link rel="icon" href="favicon.png" sizes="16x16" type="image/png">
+
   </head>
   
-  <body>
+  <body background="./img/bg.png">
     <!-- Header Section Start -->
     <header id="slider-area">  
       <nav class="navbar navbar-expand-md fixed-top scrolling-navbar bg-white">
         <div class="container">          
-          <a class="navbar-brand" href="index.html"><span class="lni-bulb"></span>Ecumenic Cultural Operations</a>
+          <a class="navbar-brand" href="index.html"><img src="./img/menu-logo.png"></span>Ecumenic Cultural Operations</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <i class="lni-menu"></i>
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto w-100 justify-content-end">
               <li class="nav-item">
-                <a class="nav-link page-scroll" href="#slider-area">Home</a>
+                <a class="nav-link page-scroll" href="#slider-area">Project</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link page-scroll" href="#services">Services</a>
-              </li>  
+              </li>
+              <li class="nav-item">
+                <a class="nav-link page-scroll" href="#video">Trailer</a>
+              </li>
               <li class="nav-item">
                 <a class="nav-link page-scroll" href="#features">Features</a>
               </li>                            
@@ -187,6 +191,23 @@
     </section>
     <!-- Services Section End -->
 
+    <!-- Start Video promo Section -->
+    <section id="video" class="video-promo section">
+      <div class="overlay"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 col-sm-12">
+              <div class="video-promo-content text-center">
+                <a href="https://www.youtube.com/embed/lPfU7OEfBm8" class="video-popup"><i class="lni-film-play"></i></a>
+                <h2 class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Our Introductory Video</h2>
+                <p class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Learn more about us, its only 30mins</p>
+              </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Video Promo Section -->
+
     <!-- Call to Action Start -->
     <section class="call-action section">
       <div class="container">
@@ -300,23 +321,6 @@
       </div>
     </section>
     <!-- Features Section End -->    
-
-    <!-- Start Video promo Section -->
-    <section class="video-promo section">
-      <div class="overlay"></div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 col-sm-12">
-              <div class="video-promo-content text-center">
-                <a href="https://www.youtube.com/embed/LSgBpbgTlhw" class="video-popup"><i class="lni-film-play"></i></a>
-                <h2 class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Our Introductory Video</h2>
-                <p class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Learn more about us, its only 30mins</p>
-              </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- End Video Promo Section -->
 
     <!-- Portfolio Section -->
     <section id="portfolios" class="section">
@@ -1067,7 +1071,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-12 padding-0">
-            <object style="border:0; height: 450px; width: 100%;" data="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d34015.943594576835!2d-106.43242624069771!3d31.677719472407432!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86e75d90e99d597b%3A0x6cd3eb9a9fcd23f1!2sCourtyard+by+Marriott+Ciudad+Juarez!5e0!3m2!1sen!2sbd!4v1533791187584"></object>
+            <object style="border:0; height: 450px; width: 100%;" data="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29255.536522682985!2d-46.6486281540662!3d-23.570524133371226!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce599e0c92d58f%3A0xc929c87594bc9686!2zQXYuIGRhIEFjbGltYcOnw6NvLCA1NDcgLSBBY2xpbWHDp8OjbywgU8OjbyBQYXVsbyAtIFNQLCAwMTUzMS0wMDE!5e0!3m2!1spt-BR!2sbr!4v1547128387398" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>"></object>
           </div>
         </div>
       </div>
@@ -1081,12 +1085,9 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
-              <h3>Essence</h3>
+              <h3>ECO</h3>
               <div class="textwidget">
-                <p>If you think you have the passion, 
-                attitude and capability to join us 
-                the next big software company
-                s so that we can get the convers.</p>
+                <p>Ethic Ecumenic Educational<br>Collaborative Cultural Creative<br>OpenSource Operatic Operations</p>
               </div>
               <ul class="footer-social">
                 <li><a class="facebook" href="#"><i class="lni-facebook-filled"></i></a></li>
@@ -1097,13 +1098,14 @@
             </div>
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-6 col-mb-12">
               <div class="widget">
-                <h3 class="block-title">Short Link</h3>
                 <ul class="menu">
-                  <li><a href="#">Service</a></li>
-                  <li><a href="#">Wishlist</a></li>
-                  <li><a href="#">FAQ</a></li>
-                  <li><a href="#">Advance Sarch</a></li>
+                  <li><a href="#">Project</a></li>
+                  <li><a href="#">Portfolio</a></li>
+                  <li><a href="#">Participate</a></li>
                   <li><a href="#">Site Map</a></li>
+                  <li><a href="#">Hire Us</a></li>
+                  <li><a href="#">Donate</a></li>
+                  <li><a href="#">Contact</a></li>
                 </ul>
               </div>
             </div>
@@ -1112,13 +1114,13 @@
                 <h3 class="block-title">Contact Us</h3>
                 <ul class="contact-footer">
                   <li>
-                    <strong>Address :</strong> <span>1900 Pico Blvd, New York br Centernial, colorado</span>
+                    <strong>Address :</strong> <span>547 Aclimação Avenue, São Paulo, Brazil</span>
                   </li>
                   <li>
-                    <strong>Phone :</strong> <span>+48 123 456 789</span>
+                    <strong>Phone :</strong> <span>+55(11)99977.0055</span>
                   </li>
                   <li>
-                    <strong>E-mail :</strong> <span><a href="#">info@example.com</a></span>
+                    <strong>E-mail :</strong> <span><a href="#">ecumenic@protonmail.com</a></span>
                   </li>
                 </ul> 
               </div>
@@ -1147,24 +1149,30 @@
           <div class="row">
             <div class="col-md-12">
               <div class="site-info float-left">
-                <p>Crafted by <a href="http://uideck.com" rel="nofollow">UIdeck</a></p>
+                <p><a href="https://creativecommons.org/licenses/by-nc-sa/4.0"><img src="./img/cc-by-nc-sa.png"></a>&nbsp&nbsp&nbspCrafted editing the <i><a href="http://uideck.com" rel="nofollow">UIdeck Essence Template</a></i> with <i><a href="https://thenounproject.com"> Noun Project Icons</a></i> & <i><a href="https://design.ubuntu.com/font"> Ubuntu Condensed Font</a></i>.</p>
               </div>              
               <div class="float-right">  
                 <ul class="nav nav-inline">
                   <li class="nav-item">
-                    <a class="nav-link active" href="#">About Prime</a>
+                    <a class="nav-link active" href="#">Project</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">TOS</a>
+                    <a class="nav-link" href="#">Portfolio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Return Policy</a>
+                    <a class="nav-link" href="#">Participate</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">FAQ</a>
+                    <a class="nav-link" href="#">Site Map</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="#">Hire Us</a>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Donate</a>
+                  </li>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contact</a>
                   </li>
                 </ul>
               </div>
@@ -1184,6 +1192,7 @@
 
     <div id="loader">
       <div class="spinner">
+        <div class="loader-logo"><img src="./img/loader.png"></div>
         <div class="double-bounce1"></div>
         <div class="double-bounce2"></div>
       </div>
