--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <div class="row">
           <div class="col-md-12 col-sm-12">
               <div class="video-promo-content text-center">
-                <a href="https://www.youtube.com/embed/lPfU7OEfBm8" class="video-popup"><i class="lni-film-play"></i></a>
+                <a href="https://vimeo.com/117069702" class="video-popup"><i class="lni-film-play"></i></a>
                 <h2 class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Our Introductory Video</h2>
                 <p class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Learn more about us, its only 30mins</p>
               </div>
