--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <!-- METATAGS made with http://www.metatags.org -->
 <meta charset="utf-8">
-<meta name="description" content="Ecumenic site-specific open-source collaborative contemporary philanthopic non-profit fair-trade ethic guided culture development art & opera company.">
+<meta name="description" content="Ecumenic site-specific open-source collaborative contemporary philanthropic non-profit fair-trade ethic guided culture development art & opera company.">
 <meta name="keywords" content="art,culture,ecumenism,religion">
 <meta name="author" content="Ecumenic Creative Operations">
 <meta name='copyright' content="Creative Commons BY-NC-SA 4.0">
@@ -27,6 +27,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <!-- BOOTSTRAP CSS made with http://uideck.com "Essence" Template -->
 <link rel="stylesheet" href="css/animate.css">
+<link rel="stylesheet" href="css/color-switcher.css">
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/line-icons.css">
 <link rel="stylesheet" href="css/magnific-popup.css">
@@ -37,6 +38,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <link rel="stylesheet" href="css/owl.theme.css">
 <link rel="stylesheet" href="css/responsive.css">
 <!-- // Bootstrap Css -->
+
+<!-- DONORBOX SCRIPT -->
+<script src="https://donorbox.org/install-popup-button.js" type="text/javascript" defer></script>
+<script> window.DonorBox = { widgetLinkClassName: 'custom-dbox-popup' } </script>
+<!-- Donorbox Script End -->
 
 </head>
 <body background="./img/bg.png">
@@ -146,7 +152,7 @@ Translate
 Ecumenic Creative Operations
 </h2>
 <h4 class="wow fadeInUp" data-wow-delay="0.6s">
-Site-specific open-source collaborative contemporary philanthopic non-profit fair-trade ethic guided culture development art company.
+Site-specific open-source collaborative contemporary philanthropic non-profit fair-trade ethic guided culture development art company.
 </h4>
 <a href="#project" class="page-scroll btn btn-lg btn-common btn-effect wow fadeInUp" data-wow-delay="0.7s">Learn More</a>
 </div>
@@ -251,7 +257,7 @@ You can get an overview of our <a href="#process">process</a> viewing our projec
 </p> 
 </div>
 <div class="featured-box row">
-<div class="col-md-1">
+<div class="col-md-1" align="center">
 <img src="./img/project.png">
 </div>
 <div class="col-md-11">
@@ -441,15 +447,15 @@ Work Ethics Policies
 <i>We have a <a href="https://github.com/ecumenic/project">repository</a> following God loving ecumenic principles aiming at respectful relations and sustainable processes, practices, and work environment. You can access them directly through the following links.</i>
 <br>
 <br>
-⚫ <a href="https://github.com/ecumenic/project/blob/master/README">Readme File</a>
+⚫ <a href="https://github.com/ecumenic/project/blob/master/README" target="about_blank">Readme File</a>
 <br>
-⚫ <a href="https://github.com/ecumenic/project/blob/master/LICENSE">License</a>
+⚫ <a href="https://github.com/ecumenic/project/blob/master/LICENSE" target="about_blank">License</a>
 <br>
-⚫ <a href="https://github.com/ecumenic/project/blob/master/CODE_OF_CONDUCT">Code Of Conduct</a>
+⚫ <a href="https://github.com/ecumenic/project/blob/master/CODE_OF_CONDUCT" target="about_blank">Code Of Conduct</a>
 <br>
-⚫ <a href="https://github.com/ecumenic/project/blob/master/CONTRIBUTING">Contributing Guidelines</a>
+⚫ <a href="https://github.com/ecumenic/project/blob/master/CONTRIBUTING" target="about_blank">Contributing Guidelines</a>
 <br>
-⚫ <a href="https://github.com/ecumenic/project/blob/master/CONTRACT">Contracting Guidelines</a>
+⚫ <a href="https://github.com/ecumenic/project/blob/master/CONTRACT" target="about_blank">Contracting Guidelines</a>
 </div>
 <div class="modal-footer">
 <button type="button" class="btn btn-secondary" data-dismiss="modal">
@@ -707,7 +713,7 @@ This constant improvement policy assembled the following current problems and fe
 <br> 
 It is composed of a high volume data in structured and unstructured formats with a very time bandwidth left to analyze it properly. 
 <br>
-If you can help us in this process or its automation, please <a href="#participate">join our community</a>
+If you can help us in this process or its automation, please <a href="#participate">join our community</a> and(or) <a href="https://donorbox.org/ecumenic-creative-operations-sponsorship" class="custom-dbox-popup">sponsor our project</a>.
 <br>
 <i>(Click on each box to open their content.)</i>
 </p>
@@ -1339,7 +1345,7 @@ Be kind to consider that the presented works were made to site-specificities wit
 <br>
 We are continuously working to improve our processes and products. If you have any question concearning one of the pieces please contact us.
 <br>
-If this material is useful for you, help us to implement and improve it <a href="#participate" class="page-scroll">donating, collaborating on our project, or hiring us</a>.
+If this material is useful for you, <a href="#participate" class="page-scroll">help us to implement and improve it</a> and(or) <a href="https://donorbox.org/ecumenic-creative-operations-sponsorship" class="custom-dbox-popup">sponsor our project</a>.
 <br>
 Remember nature, print only the utmost necessary copies of any of our materials, and have fun making the most professional covers you can.<br>
 <i>(Click on each box to open their galleries in other windows.)</i>
@@ -1482,6 +1488,8 @@ Our Company
 </h2>
 <p class="section-subtitle">
 These are the people that make this project possible.
+<br>
+For more informations on our entrepenaurial development follow our <a href="https://www.linkedin.com/company/ecumenic">Company LinkedIn Page</a>.
 </p>
 <br>
 </div>
@@ -1498,8 +1506,7 @@ Felipe "Operário" Ribeiro
 <p>
 Creative Director & CEO
 <br>
-<a href="http://facebook.com/operarioribeiro">facebook</a> | 
-<a href="http://linkedin.com/in/operarioribeiro">linkedin</a> | <a href="#">cv</a>
+<a href="http://linkedin.com/in/operarioribeiro">linkedin</a> | <a href="#">curriculum</a>
 </p>
 </div>
 </div>
@@ -1603,15 +1610,15 @@ If you have any question about our involvment with them, please contact us.
 <div class="carousel-inner" role="listbox">
 <!-- PARTNERS CAROUSEL ITEM 1 -->
 <div class="carousel-item active">
-<img src="./img/previouspartners-1.jpg" alt="">
+<img src="./img/previouspartners-1.jpg" width="100%">
 </div>
 <!-- PARTNERS CAROUSEL ITEM 2 -->
 <div class="carousel-item">
-<img src="./img/previouspartners-2.jpg" alt="">
+<img src="./img/previouspartners-2.jpg" width="100%">
 </div>
 <!-- PARTNERS CAROUSEL ITEM 3 -->
 <div class="carousel-item">
-<img src="./img/previouspartners-3.jpg" alt="">
+<img src="./img/previouspartners-3.jpg" width="100%">
 </div>
 <!-- PARTNERS CAROUSEL CONTROLS -->
 <a class="carousel-control-prev" href="#carousel-slider2" role="button" data-slide="prev">
@@ -1640,13 +1647,15 @@ Next
 
 <!-- CROWDSOURCING -->
 <section id="participate" class="section pricing-section">
+<div align="center" valign="middle" style="background-image:url('./img/participate-bg.jpg');width:100%;height:100%;background-attachment:fixed">
 <div class="container">
 <div class="section-header">          
+<br>
 <h2 class="section-title">
 Crowdsourcing
 </h2>
 <p class="section-subtitle">
-Help us anyway you way that makes you feel awesome.
+Help us anyway you can feeling awesome.
 </p>
 </div>
 <!-- CONTRACT -->
@@ -1694,19 +1703,27 @@ Please support our projects development.
 </div>
 </div>
 <br>
-<a href="https://paypal.com" target="about_blank">Paypal</a>
+<i>
+Interfaith Crosscultural Creativity Artscraft.
 <br>
-<a href="https://donorbox.org" target="about_blank">Donorbox</a>
+Skilled Mentored Regenerative Collaboration.
 <br>
-<a href="https://www.patreon.com" target="about_blank">Patreon</a>
+Analytic Creative Economy Chain Valuing.
 <br>
-<a href="https://fair-coin.org" target="about_blank">FairCoin</a>
+Sustainable Open Source Methodologies Sharing.
 <br>
-<a href="https://www.causes.com" target="about_blank">Causes</a>
-<br>
+</i>
 <div class="plan-button">
-<a href="#" class="btn btn-common btn-effect">
+<a href="https://donorbox.org/ecumenic-creative-operations-sponsorship" class="btn btn-common btn-effect custom-dbox-popup">
 Donate Now
+<br>
+<img src="./img/donate.png">
+</a>
+<br>
+<font size="-2">Powered by <a href="https://donorbox.org/?utm_source=Poweredby" target="about_blank">donorbox.org</a></font>
+<br>
+<br>
+<font size="-2"><a href="https://fair-coin.org"><img src="./img/faircoin.png"></a> <a href="https://fair-coin.org/en/faircoin-wallets">FairCoin</a>: fPm9oraA65TdrqWA1991yG1Qsp6XX3BLf9</font>
 </a>
 </div>
 </div>
@@ -1723,28 +1740,111 @@ Open-Source Voluntary Collaborations.
 </span>
 </div>
 <br>
-<a href="">Why Collaborate With Us</a>
+<a id="modal-14" href="#modal-container-14" role="button" data-toggle="modal" role="button">
+Why Collaborate With Us</a>
+<!-- COLLABORATE MODALBOX 1 -->
+<div class="modal fade" id="modal-container-14" role="dialog" aria-labelledby="myModalLabel14" aria-hidden="true">
+<div class="modal-dialog" role="document">
+<div class="modal-content">
+<div class="modal-header">
+<h5 class="modal-title" id="myModalLabel14">
+Why Collaborate With Us:
+</h5> 
+<button type="button" class="close" data-dismiss="modal">
+<span aria-hidden="true">×</span>
+</button>
+</div>
+<div class="modal-body" align="left">
+⚫ Spiritual & Cultural Creation Thanking.<br>
+⚫ Mentored Community Skills Improvement.<br>
+⚫ Every Work As An Artform Empowerment.<br>
+⚫ Respectful Professional Relations Meeting. <br>
+⚫ Sensibility & Rationality Awareness Optimization. <br>
+⚫ Responsible Ethic Creativity Producing.<br>
+⚫ On-Demand Simple Task-Oriented Schedule.<br>
+⚫ Reputation & Portfolio Valuing & Implementation.<br>
+⚫ Sustainable Creative Industry Networking.<br>
+⚫ Interfaith Religious Freedom Fostering.<br>
+⚫ Reliability Engineered Transparent Self-Governance.<br>
+⚫ Optimum Sustainable Logistics Management. <br>
+⚫ Technical Production Labour Qualification. <br>
+⚫ Fair-Trade Contracting Lawful Formalization. <br>
+⚫ Regenerative Collective Artscraft Productions.<br>
+⚫ Analytic Creative Economy Chain Valuing. <br>
+⚫ Progressive Multimedia Process Documentation.<br>
+⚫ Complex Knowledge Simplification Sharing.<br>
+⚫ Open Source Methodologies Spreading.<br>
+⚫ Scalable Positioning Possibilities.
+</div>
+</div>
+</div>
+</div>
 <br>
-<a href="">Collaborations We Need</a>
+<a id="modal-15" href="#modal-container-15" role="button" data-toggle="modal" role="button">
+Collaborations We Need</a>
+<!-- COLLABORATE MODALBOX 2 -->
+<div class="modal fade" id="modal-container-15" role="dialog" aria-labelledby="myModalLabel15" aria-hidden="true">
+<div class="modal-dialog" role="document">
+<div class="modal-content">
+<div class="modal-header">
+<h5 class="modal-title" id="myModalLabel15">
+Collaborations We Need:
+</h5> 
+<button type="button" class="close" data-dismiss="modal">
+<span aria-hidden="true">×</span>
+</button>
+</div>
+<div class="modal-body" align="left">
+⚫ Overall Project Review.<br>
+⚫ Clients & Sponsors Acquisition.<br>
+⚫ Methodologies & Processes Optimization.<br>
+⚫ Solve & Organize Issues & Suggestions.<br>
+⚫ Documentation Optimization.<br>
+⚫ New Partnership Pitching.<br>
+⚫ Meetups & Workshops Organization.<br>
+⚫ Conference Production.<br>
+⚫ Automate Processual Setups.<br>
+⚫ Code Cleaning And Optimization.<br>
+⚫ Coherent Design Optimization.<br>
+⚫ Layout Improvement.<br>
+⚫ Reorganization Partners Research.<br>
+⚫ Merchandise Production & Distribution.<br>
+⚫ Templates Optimization.<br>
+⚫ Social Media Material Curatorship.<br>
+⚫ Develop Our Computational Applications.<br>
+⚫ New Tutorials Or Documentations.<br>
+⚫ Translations To Other Languages.<br>
+⚫ Review Others Codes & Mentoring.<br>
+⚫ MOOC Development.
+</div>
+</div>
+</div>
+</div>
 <br>
-<a href="https://github.com/ecumenic/project/blob/master/README">Read Our Readme File</a>
+<a href="https://github.com/ecumenic/project/blob/master/README" target="about_blank">Read Our Readme File</a>
 <br>
-<a href="https://github.com/ecumenic/project/blob/master/LICENSE">Read Our License Agreement</a>
+<a href="https://github.com/ecumenic/project/blob/master/LICENSE" target="about_blank">Read Our License Agreement</a>
 <br>
-<a href="https://github.com/ecumenic/project/blob/master/CODE_OF_CONDUCT">Read Our Code Of Conduct</a>
+<a href="https://github.com/ecumenic/project/blob/master/CODE_OF_CONDUCT" target="about_blank">Read Our Code Of Conduct</a>
 <br>
-<a href="https://github.com/ecumenic/project/blob/master/CONTRIBUTING">Read Our Contributing Guidelines</a>
+<a href="https://github.com/ecumenic/project/blob/master/CONTRIBUTING" target="about_blank">Read Our Contributing Guidelines</a>
 <br>
 </div>
 <div class="plan-button">
 <a href="#community" class="btn btn-common btn-effect page-scroll">
 Join Our Community
+<br>
+<img src="./img/collaborate.png">
 </a>
+<br>
+<font size="-2">Powered by <a href="https://github.com" target="about_blank">github.com</a></font>
 </div>
 </div>
 </div>
 <!-- CROWDSOURCING CODA -->
 </div>
+</div>
+<br><br>
 </div>
 </section>
 <!-- // Crowdsourcing End -->
@@ -1762,7 +1862,7 @@ Our community communication channels are devoted to foster the compassionate sol
 <br>
 You are invited to <a href="#participate" class="page-scroll">participate</a> on our projects development and <a href="#contact" class="page-scroll">contact us</a> with your contribution.
 <br>
-Remember we follow our <a href="https://github.com/ecumenic/project/blob/master/README">general guidelines</a> and <a href="https://github.com/ecumenic/project/blob/master/CODE_OF_CONDUCT">code of conduct</a> when reviewing comments and contributions.
+Remember we follow our <a href="https://github.com/ecumenic/project/blob/master/README" target="about_blank">general guidelines</a> and <a href="https://github.com/ecumenic/project/blob/master/CODE_OF_CONDUCT" target="about_blank">code of conduct</a> when reviewing comments and contributions.
 <br>
 <i>(Click on each box to open the channel in a new window.)</i>
 </p>
@@ -1847,7 +1947,7 @@ YouTube Videos & Playlists
 <div class="col-md-3" align=center>
 <div class="featured-box">
 <div class="featured-content">
-<a href="http://github.com/ecumenic" role="button" target="about_blank">
+<a href="https://github.com/ecumenic" role="button" target="about_blank">
 <img src="./img/community-6.png">
 <br>
 <h4>
@@ -1914,19 +2014,30 @@ We are looking for <a href="#participate" class="page-scroll">your participation
 </section>
 <!-- // Community End-->
 
+<!-- PHOTO -->
+<div class="col-md-12" align="center" valign="middle" style="background-image:url('./img/scenario-bg.jpg');width:100%;height:100%;background-attachment:fixed">
+<a href=./img/scenario-chart.png"><img src="./img/scenario-chart.png" alt="Creative Progressive Process" style="display:block;max-width:100%;
+height:auto;"></a>
+</div>
+<!-- // Photo End -->
+
 <!-- CONTACT -->
 <section id="contact" class="section">      
 <div class="contact-form">
 <div class="container">
 <div class="section-header">          
-<h2 class="section-title">Contact Us</h2>
-<p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos debitis.</p>
+<h2 class="section-title">
+Contact Us
+</h2>
+<br>
+<p class="section-subtitle">
+</p>
 </div>
 <div class="row">          
 <!-- CONTACT FORM -->
 <div class="col-lg-9 col-md-9 col-xs-12">
 <div class="contact-block">
-<form id="contactForm" action="https://formspree.io/ecumenic@protonmail.com" method="post">
+<form id="contactForm" action="https://formspree.io/ecumenic@protonmail.com" method="POST">
 <div class="row">
 <div class="col-md-6">
 <div class="form-group">
@@ -1937,7 +2048,7 @@ We are looking for <a href="#participate" class="page-scroll">your participation
 </div>
 <div class="col-md-6">
 <div class="form-group">
-<input type="text" placeholder="Your Email" id="email" class="form-control" name="name" required data-error="Please enter your email">
+<input type="_replyto" placeholder="Your Email" id="email" class="form-control" name="name" required data-error="Please enter your email">
 <div class="help-block with-errors">
 </div>
 </div> 
@@ -1957,7 +2068,7 @@ We are looking for <a href="#participate" class="page-scroll">your participation
 </div>
 </div>
 <div class="submit-button" align="center">
-<button class="btn btn-common btn-effect" id="submit" type="submit">
+<button class="btn btn-common btn-effect" id="submit" type="submit" value="Send">
 Send Message
 </button>
 <div id="msgSubmit" class="h3 hidden">
@@ -2000,6 +2111,7 @@ ecumenic@protonmail.com
 </p>
 </div>
 <!-- CONTACT PHONE -->
+<!--
 <div class="contact-info">
 <i class="lni-phone">
 </i>
@@ -2009,9 +2121,8 @@ Phone
 <p>
 +55(11)99977.0055
 </p>
-</div>
-<!-- SOCIAL MEDIA ICONS -->
-
+</div> 
+-->
 <!-- CONTACT CODA -->
 </div>
 </div>
@@ -2111,7 +2222,7 @@ Translate
 </li>
 </ul>
 <div align="right">
-<i>All praises and glories to God.</i>
+<i>❤ All praises and glories to God.</i>
 </div>
 </div>
 </div>
@@ -2140,11 +2251,16 @@ Translate
 </div>    
 <!-- // Go To Top link -->
 
+<!--DONATE TAB -->
+<div id="color-style-switcher" style="left: -40px;"><div></div>
+<!-- Donate Tab End -->
+
 <!-- JQUERY, TETHER, BOOTSTRAP -->
 <script src="js/jquery-min.js"></script>
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/classie.js"></script>
+<script src="js/color-switcher.js"></script>
 <script src="js/jquery.mixitup.js"></script>
 <script src="js/nivo-lightbox.js"></script>
 <script src="js/owl.carousel.js"></script>    
