--- a/index.html
+++ b/index.html
@@ -1951,7 +1951,7 @@ YouTube Videos & Playlists
 <img src="./img/community-6.png">
 <br>
 <h4>
-Ecumenic Git Hub
+Ecumenic Applications
 </h4>
 </a>
 GitHub DevOps Repository
