--- a/index.html
+++ b/index.html
@@ -188,8 +188,7 @@ Our reliability engineered modular open-source creative programs result in a ser
 <!-- PRESENTATION CAROUSEL CONTROLS -->
 <a class="carousel-control-prev" href="#carousel-slider" role="button" data-slide="prev">
 <span class="carousel-control" aria-hidden="true">
-<i class="lni-chevron-left">
-</i>
+<img src="./img/carousel-left.png">
 </span>
 <span class="sr-only">
 Previous
@@ -197,8 +196,7 @@ Previous
 </a>
 <a class="carousel-control-next" href="#carousel-slider" role="button" data-slide="next">
 <span class="carousel-control" aria-hidden="true">
-<i class="lni-chevron-right">
-</i>
+<img src="./img/carousel-right.png">
 </span>
 <span class="sr-only">
 Next
@@ -222,8 +220,7 @@ Next
 <br>
 <br>
 <a href="#" class="video-popup">
-<i class="lni-film-play">
-</i>
+<img src="./img/trailer.png">
 </a>
 <h2 class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">
 Trailer
@@ -1537,14 +1534,23 @@ Devoted to Jesus Christ, his personal Buddha, he tries with the Ecumenic Creativ
 </div>
 </div>
 </div>
+</div>
+</div>
 <!-- COMPANY 3 -->
+<div class="col-md-12" align="center" valign="middle" style="background-image:url('./img/company-bg.jpg');width:100%;height:100%;background-attachment:fixed">
+<br>
+<br>
+<div class="row container">
 <div class="col-lg-9 col-md-6 col-xs-12">
 <div class="single-team">
 <div class="team-details">
 <div class="team-inner">
-<h4 class="team-title">
+<div class="section-header">          
+<h2 class="section-title">
 Join Us!
-</h4>
+</h2>
+<br>
+</div>
 <p align="justify">
 There are too many people and issues in need of our assistance. There are so many things we need to improve in ourselves. There are as many methods and solutions as there can be today. There are legacies of dignifying historical examples. There are uncountable precise craft and techniques available. There are networks of well intended enterprises producing. There are crowds of assisting institutions worldwide. There are billions of people praying for us right now. There are unexplainable beauty still waiting for art. There are infinite reasons for us to be thankful to God. There are many ways to worship God with love daily.
 </p>
@@ -1623,8 +1629,7 @@ If you have any question about our involvment with them, please contact us.
 <!-- PARTNERS CAROUSEL CONTROLS -->
 <a class="carousel-control-prev" href="#carousel-slider2" role="button" data-slide="prev">
 <span class="carousel-control" aria-hidden="true">
-<i class="lni-chevron-left">
-</i>
+<img src="./img/carousel-left.png">
 </span>
 <span class="sr-only">
 Previous
@@ -1632,8 +1637,7 @@ Previous
 </a>
 <a class="carousel-control-next" href="#carousel-slider2" role="button" data-slide="next">
 <span class="carousel-control" aria-hidden="true">
-<i class="lni-chevron-right">
-</i>
+<img src="./img/carousel-right.png">
 </span>
 <span class="sr-only">
 Next
@@ -1850,7 +1854,7 @@ Join Our Community
 <!-- // Crowdsourcing End -->
 
 <!-- COMMUNITY -->
-<section id="community" class="section" style="background-image:url('./img/portfolio-bg.jpg');width:100%;height:100%;background-attachment:fixed">
+<section id="community" class="section">
 <div class="container">
 <div class="col-md-12">
 <div class="section-header">          
@@ -2014,12 +2018,12 @@ We are looking for <a href="#participate" class="page-scroll">your participation
 </section>
 <!-- // Community End-->
 
-<!-- PHOTO -->
-<div class="col-md-12" align="center" valign="middle" style="background-image:url('./img/scenario-bg.jpg');width:100%;height:100%;background-attachment:fixed">
-<a href=./img/scenario-chart.png"><img src="./img/scenario-chart.png" alt="Creative Progressive Process" style="display:block;max-width:100%;
+<!-- COMMUNICATION -->
+<div class="col-md-12" align="center" valign="middle" style="background-image:url('./img/communication-bg.jpg');width:100%;height:100%;background-attachment:fixed">
+<a href=./img/communication-chart.png"><img src="./img/communication-chart.png" alt="Creative Progressive Process" style="display:block;max-width:100%;
 height:auto;"></a>
 </div>
-<!-- // Photo End -->
+<!-- // Communication End -->
 
 <!-- CONTACT -->
 <section id="contact" class="section">      
@@ -2126,6 +2130,7 @@ Phone
 <!-- // Contacts End -->
     
 <!-- MAP -->
+<!--
 <section id="google-map-area">
 <div class="container-fluid">
 <div class="row">
@@ -2137,6 +2142,7 @@ Phone
 </div>
 </div>
 </section>
+-->
 <!-- // Map End -->
 
 <!-- COPYRIGHT -->
@@ -2227,9 +2233,11 @@ Translate
 
 <!-- GO TO TOP LINK -->
 <a href="#" class="back-to-top">
-<i class="lni-arrow-up">
-</i>
+<img src="./img/gototop.png">
 </a>
+<!-- // Go To Top Link End -->
+
+<!-- PRELOADER -->
 <div id="loader">
 <div class="spinner">
 <div class="loader-logo">
@@ -2241,7 +2249,7 @@ Translate
 </div>
 </div>
 </div>    
-<!-- // Go To Top link -->
+<!-- // Preloader End -->
 
 <!--DONATE TAB -->
 <div id="color-style-switcher" style="left: -40px;"><div></div>
