--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Cultural Data Science
 </li>
 <li>
 <a href="#audit" class="nav-link page-scroll">
-Reliability Audit Network
+Reliability Audit Network&nbsp&nbsp&nbsp&nbsp
 </a>
 </li>
 </ul>
@@ -99,7 +99,7 @@ Research
 <ul class="dropdown">
 <li>
 <a href="#scenario" class="nav-link page-scroll">
-Cultural Experience Scenario
+Cultural Experience Scenario&nbsp&nbsp&nbsp&nbsp
 </a>
 </li>
 <li>
@@ -146,7 +146,7 @@ Sculptures
 </li>
 <li>
 <a href="#" class="nav-link" target="_blank">
-Performances
+Performances&nbsp&nbsp&nbsp&nbsp
 </a>
 </li>
 <li>
@@ -205,7 +205,7 @@ Previous Partners
 </li>
 <li>
 <a href="#audit" class="nav-link page-scroll">
-Reliability Audit Network
+Reliability Audit Network&nbsp&nbsp&nbsp&nbsp
 </a>
 </li>
 <li>
@@ -259,7 +259,7 @@ Ecumenic Applications IDE GitHub
 </li>
 <li>
 <a href="#workflow" class="nav-link page-scroll">
-Ecumenic Presential Calendar Meetup
+Ecumenic Presential Calendar Meetup&nbsp&nbsp&nbsp&nbsp
 </a>
 </li>
 <li>
@@ -277,7 +277,7 @@ Participate
 </li>
 <li>
 <a href="https://donorbox.org/ecumenic" class="custom-dbox-popup nav-link">
-Sponsor Us
+Donate
 </a>
 </li>
 <li class="nav-item">
@@ -446,11 +446,11 @@ They are designed to result in <a class="page-scroll" href="#services">products 
 <div align="center">
 <br>
 <br>
-<a href="#services" class="btn btn-lg btn-common btn-effect page-scroll">
+<a href="#services" class="btn btn-common btn-effect page-scroll">
 View Our Services & Products 
 </a> 
 &nbsp&nbsp
-<a href="#research" class="btn btn-lg btn-common btn-effect page-scroll">
+<a href="#research" class="btn btn-common btn-effect page-scroll">
 Learn About Our Research
 </a>
 </div>
@@ -530,15 +530,15 @@ This development operation makes our <a href="#artworks" class="page-scroll">art
 </div>
 </div>
 <div align="center">
-<a href="#process" class="btn btn-lg btn-common btn-effect page-scroll">
+<a href="#process" class="btn btn-common btn-effect page-scroll">
 Our Creative Process
 </a> 
 &nbsp&nbsp
-<a href="#research" class="btn btn-lg btn-common btn-effect page-scroll">
+<a href="#research" class="btn btn-common btn-effect page-scroll">
 Learn About Our Research
 </a>
 &nbsp&nbsp
-<a href="#artworks" class="btn btn-lg btn-common btn-effect page-scroll">
+<a href="#artworks" class="btn btn-common btn-effect page-scroll">
 View Our Artworks
 </a>
 </div>
@@ -905,15 +905,15 @@ Close
 <!--  PROCESS CODA -->
 </div>
 <div align="center">
-<a href="#company" class="btn btn-lg btn-common btn-effect page-scroll">
+<a href="#company" class="btn btn-common btn-effect page-scroll">
 Learn About Our Company
 </a>
 &nbsp&nbsp
-<a href="#research" class="btn btn-lg btn-common btn-effect page-scroll">
+<a href="#research" class="btn btn-common btn-effect page-scroll">
 Learn About Our Research
 </a>
 &nbsp&nbsp
-<a href="#participate" class="btn btn-lg btn-common btn-effect page-scroll">
+<a href="#participate" class="btn btn-common btn-effect page-scroll">
 Collaborate With Us
 </a>
 </div>
@@ -992,11 +992,11 @@ Responsible Creativity Program
 <div align="center">
 <br>
 <br>
-<a href="#analysis" class="btn btn-lg btn-common btn-effect page-scroll">
+<a href="#analysis" class="btn btn-common btn-effect page-scroll">
 View Our Analysis Report
 </a>
 &nbsp&nbsp
-<a href="#artworks" class="btn btn-lg btn-common btn-effect page-scroll">
+<a href="#artworks" class="btn btn-common btn-effect page-scroll">
 View Our Artworks
 </a> 
 </div>
@@ -1029,6 +1029,7 @@ Scenario Analysis Report
 It is composed of current ecumenic culture problems and feasable possible solutions & advancements available.
 <br>
 If this research is of use to you please <a href="https://donorbox.org/ecumenic" class="custom-dbox-popup">sponsor our project</a>.
+</i>
 </p>
 </div>
 <div class="container">
@@ -1634,15 +1635,15 @@ Close
 <div align="center">
 <br>
 <br>
-<a href="#company" class="btn btn-lg btn-common btn-effect page-scroll">
+<a href="#company" class="btn btn-common btn-effect page-scroll">
 Learn About Our Company
 </a>
 &nbsp&nbsp
-<a href="#artworks" class="btn btn-lg btn-common btn-effect page-scroll">
+<a href="#artworks" class="btn btn-common btn-effect page-scroll">
 View Our Artworks
 </a> 
 &nbsp&nbsp
-<a href="#participate" class="btn btn-lg btn-common btn-effect page-scroll">
+<a href="#participate" class="btn btn-common btn-effect page-scroll">
 Collaborate With Us
 </a> 
 </div>
@@ -1685,7 +1686,7 @@ If this material is useful to you, <a href="#participate" class="page-scroll">he
 <div class="container">
 <div class="row">
 <!-- ARTWORKS 1 PAINTINGS -->
-<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12" align=center>
+<div class="col-lg-3 col-md-3 col-sm-6 col-xs-12" align=center>
 <div class="featured-box">
 <div class="featured-content">
 <a href="http://www.piwigo.org" role="button" target="_blank">
@@ -1702,7 +1703,7 @@ Paintings
 </div>
 </div>
 <!-- ARTWORKS 2 SCULPTURES -->
-<div class="col-lg-3 col-md-4  col-sm-6 col-xs-12" align=center>
+<div class="col-lg-3 col-md-3  col-sm-6 col-xs-12" align=center>
 <div class="featured-box">
 <div class="featured-content">
 <a href="https://github.com/ecumenic" role="button" target="_blank">
@@ -1716,7 +1717,7 @@ Sculptures
 </div>
 </div>
 <!-- ARTWORKS 3 PERFORMANCES -->
-<div class="col-lg-3 col-md-4  col-sm-6 col-xs-12" align=center>
+<div class="col-lg-3 col-md-3  col-sm-6 col-xs-12" align=center>
 <div class="featured-box">
 <div class="featured-content">
 <a href="http://www.piwigo.org" role="button" target="_blank">
@@ -1730,7 +1731,7 @@ Performances
 </div>
 </div>
 <!-- ARTWORKS 4 MUSIC -->
-<div class="col-lg-3 col-md-4  col-sm-6 col-xs-12" align=center>
+<div class="col-lg-3 col-md-3  col-sm-6 col-xs-12" align=center>
 <div class="featured-box">
 <div class="featured-content">
 <a href="https://ecumenic.bandcamp.com" role="button" target="_blank">
@@ -1745,7 +1746,7 @@ Music
 </div>
 </div>
 <!-- ARTWORKS 5 PHOTOS -->
-<div class="col-lg-3 col-md-4  col-sm-6 col-xs-12" align=center>
+<div class="col-lg-3 col-md-3  col-sm-6 col-xs-12" align=center>
 <div class="featured-box">
 <div class="featured-content">
 <a href="http://www.piwigo.org" role="button" target="_blank">
@@ -1759,7 +1760,7 @@ Photos
 </div>
 </div>
 <!-- ARTWORKS 6 VIDEOS -->
-<div class="col-lg-3 col-md-4  col-sm-6 col-xs-12" align=center>
+<div class="col-lg-3 col-md-3  col-sm-6 col-xs-12" align=center>
 <div class="featured-box">
 <div class="featured-content">
 <a href="http://www.piwigo.org" role="button" target="_blank">
@@ -1773,7 +1774,7 @@ Videos
 </div>
 </div>
 <!-- ARTWORKS 7 PUBLISHING -->
-<div class="col-lg-3 col-md-4  col-sm-6 col-xs-12" align=center>
+<div class="col-lg-3 col-md-3  col-sm-6 col-xs-12" align=center>
 <div class="featured-box">
 <div class="featured-content">
 <a href="http://www.piwigo.org" role="button" target="_blank">
@@ -1787,7 +1788,7 @@ Publishing
 </div>
 </div>
 <!-- ARTWORKS 8 PROJECTS -->
-<div class="col-lg-3 col-md-4  col-sm-6 col-xs-12" align=center>
+<div class="col-lg-3 col-md-3  col-sm-6 col-xs-12" align=center>
 <div class="featured-box">
 <div class="featured-content">
 <a href="http://www.piwigo.org" role="button" target="_blank">
@@ -1806,11 +1807,11 @@ Projects
 </div>
 <div align="center">
 <br>
-<a href="#participate" class="btn btn-lg btn-common btn-effect page-scroll">
+<a href="#participate" class="btn btn-common btn-effect page-scroll">
 Participate Now
 </a>
 &nbsp&nbsp
-<a href="#research" class="btn btn-lg btn-common btn-effect page-scroll">
+<a href="#research" class="btn btn-common btn-effect page-scroll">
 Learn About Our Research
 </a>
 &nbsp&nbsp
@@ -1834,7 +1835,7 @@ Our Company
 <a href="https://github.com/ecumenic" target="_blank">
 GitHub
 </a>
- | 
+<b> ◇ </b>
 <a href="https://www.linkedin.com/company/ecumenic" target="_blank">
 LinkedIn
 </a>
@@ -1901,7 +1902,7 @@ Through the <a id="modal-13" href="#modal-container-13" role="button" data-toggl
 <br>
 <br>
 <br>
-<div align="center"><a id="modal-14" href="#modal-container-14" role="button" data-toggle="modal" class="page-scroll btn btn-lg btn-common">Do You Want To Join Us?</a>
+<div align="center"><a id="modal-14" href="#modal-container-14" role="button" data-toggle="modal" class="page-scroll btn btn-common">Do You Want To Join Us?</a>
 </div>
 </div>
 </div>
@@ -2023,11 +2024,11 @@ Next
 </div>
 <div align="center">
 <br>
-<a href="#participate" class="btn btn-lg btn-common btn-effect page-scroll">
+<a href="#participate" class="btn btn-common btn-effect page-scroll">
 Be Our Partner Too
 </a>
 &nbsp&nbsp
-<a href="#community" class="btn btn-lg btn-common btn-effect page-scroll">
+<a href="#community" class="btn btn-common btn-effect page-scroll">
 View Our Community Channels
 </a>
 </div>
@@ -2207,15 +2208,15 @@ We are looking for <a href="#participate" class="page-scroll">your participation
 </div>
 <div align="center">
 <br>
-<a href="#research" class="btn btn-lg btn-common btn-effect page-scroll">
+<a href="#research" class="btn btn-common btn-effect page-scroll">
 Learn About Our Research
 </a>
 &nbsp&nbsp
-<a href="#participate" class="btn btn-lg btn-common btn-effect page-scroll">
+<a href="#participate" class="btn btn-common btn-effect page-scroll">
 Participate
 </a>
 &nbsp&nbsp
-<a href="#artworks" class="btn btn-lg btn-common btn-effect page-scroll">
+<a href="#artworks" class="btn btn-common btn-effect page-scroll">
 Buy Our Artworks
 </a>
 &nbsp&nbsp
@@ -2560,7 +2561,7 @@ Commercial Contract Instructions
 </button>
 </div>
 <div class="modal-body" align="left">
-<i> Before sending us any proposal, please be sure you accept our overall project's <a href="#process" class="page-scroll" onclick="$('#modal-container-19').modal('hide')">code of conduct, license, and guidelines</a>.
+<i> Before sending us any proposal, please be sure you accept our overall project's <a href="#process" class="page-scroll" onclick="$('#modal-container-19').modal('hide')">code of conduct, license, and guidelines</a>.</i>
 <br>
 <br>
 <b>Project Execution Conditions: </b><br>
@@ -2798,7 +2799,9 @@ Email Address
 <div class="clear">
 <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-common btn-effect">
 <br>
-<font size="-2">Powered by <a href="http://eepurl.com/giuOPb" title="MailChimp - email marketing made easy and fun" target="_blank">MailChimp</a></font>
+<font size="-2">
+Powered by <a href="http://eepurl.com/giuOPb" title="MailChimp - email marketing made easy and fun" target="_blank">MailChimp</a>
+</font>
 </div>
 </div>
 </form>
@@ -2830,25 +2833,12 @@ ecumenic@protonmail.com
 <a href="https://github.com/ecumenic">
 GitHub
 </a>
- | 
+ ◇ 
 <a href="https://linkedin.com/company/ecumenic">
 LinkedIn
 </a>
 </p>
 </div>
-<!-- CONTACT PHONE -->
-<!--
-<div class="contact-info">
-<i class="lni-phone">
-</i>
-<h5>
-Phone
-</h5>
-<p>
-+55(11)99977.0055
-</p>
-</div> 
--->
 <!-- CONTACT CODA -->
 </div>
 </div>
@@ -2881,6 +2871,33 @@ height:auto;">
 -->
 <!-- // Map End -->
 
+<!-- FOOTER MENU -->
+<section id="footermenu">
+<div class="container">  
+<br>
+<br>
+<font size="+1">
+<a class="page-scroll" href="http://ecumenic.github.io">
+Ecumenic Creative Operations
+</a>
+<br>
+◇
+</font>
+<br>
+<a class="page-scroll" href="#project">PROJECT</a>:&nbsp&nbsp&nbsp<font size="-1"><a href="#trailer" class=" page-scroll">Trailer Video</a> | <a href="#ecumenic" class=" page-scroll">Ecumenic Creativity</a> | <a href="#services" class=" page-scroll">Products & Services</a> | <a href="#program" class=" page-scroll">Collaborative Program</a> | <a href="#process" class=" page-scroll">Creative Process</a> | <a href="#data" class=" page-scroll">Cultural Data Science</a> | <a href="#audit" class=" page-scroll">Reliability Audit Network</a></font>
+<br>
+<a class=" page-scroll" href="#research">RESEARCH</a>:&nbsp&nbsp&nbsp<font size="-1"><a href="#scenario" class=" page-scroll">Cultural Experience Scenario</a> | 
+<a href="#research" class=" page-scroll">Research Materials</a> | <a href="#data" class=" page-scroll">Cultural Data Science</a> | <a href="#analysis" class=" page-scroll">Scenario Analysis</a> | <a href="#audit" class=" page-scroll">Research Instances</a></font>
+<br>
+<a class=" page-scroll" href="#artworks">ARTWORKS</a>:&nbsp&nbsp&nbsp<font size="-1"><a class=" page-scroll" href="#artworks">Galleries</a> | <a href="#" class="" target="_blank">Paintings</a> | <a href="#" class="" target="_blank">Sculptures</a> | <a href="#" class="" target="_blank">Performances</a> | <a href="#" class="" target="_blank">Music</a> | <a href="#" class="" target="_blank">Photos</a> | <a href="#" class="" target="_blank">Videos</a> | <a href="#" class="" target="_blank">Publishing</a> | <a href="#" class="" target="_blank">Projects</a></font>
+<br>
+<a class=" page-scroll" href="#company">COMPANY</a>:&nbsp&nbsp&nbsp<font size="-1"><a class=" page-scroll" href="#company">About Us</a> | <a class=" page-scroll" href="#process">Enterprise Policies</a> | <a href="#workflow" class=" page-scroll">Collaboration Workflow</a> | <a href="#partners" class=" page-scroll">Previous Partners</a> | <a href="#audit" class=" page-scroll">Reliability Audit Network</a> | <a href="#participate" class=" page-scroll">Contract Us</a></font>
+<br>
+<a class=" page-scroll" href="#community">THE ECUMENIC TIMES COMMUNITY</a>:&nbsp&nbsp&nbsp<font size="-1"><a href="#community" class=" page-scroll">Facebook</a> | <a href="#workflow" class="page-scroll">Medium</a> | <a href="#workflow" class="page-scroll">Twitter</a> | <a href="#workflow" class="page-scroll">Instagram</a> | <a href="#workflow" class="page-scroll">Anchor Podcast</a> | <a href="#workflow" class="page-scroll">YouTube</a> | <a href="#workflow" class=" page-scroll">GitHub</a> | <a href="#workflow" class=" page-scroll">Meetup</a></font>
+<br>
+<a class=" page-scroll" href="#participate">PARTICIPATE</a>:&nbsp&nbsp&nbsp<font size="-1"><a href="#participate" class=" page-scroll">Contract Us</a> | <a class="" href="https://donorbox.org/ecumenic" class="custom-dbox-popup">Donate</a> | <a class="page-scroll" href="#contact">Contact</a></font>
+</div>
+</section>
 <!-- COPYRIGHT -->
 <section id="copyright">
 <div class="container" align="center">
@@ -2890,71 +2907,8 @@ height:auto;">
 </a>
 &nbsp&nbsp&nbspCrafted editing the <i><a href="http://uideck.com" rel="nofollow">UIdeck Essence Template</a></i> with <i><a href="https://thenounproject.com"> Noun Project Icons</a></i>, <i><a href="https://design.ubuntu.com/font"> Ubuntu Condensed Font</a></i> & <i><a href="https://commons.wikimedia.org/wiki/Main_Page">Wikimedia Photostock</a></i>.
 </p>
-</div>  
-<div class="float-right">  
-<br>
-<ul class="nav nav-inline">
-<li class="nav-item">
-<a class="nav-link page-scroll" href="http://ecumenic.github.io">
-Ecumenic Creative Operations
-</a>
-</li>
-<li class="nav-item">
-<a class="nav-link page-scroll" href="#">
-&nbsp&nbsp|&nbsp&nbsp
-</a>
-</li>
-<li class="nav-item">
-<a class="nav-link page-scroll" href="#project">
-Project
-</a>
-</li>
-<li class="nav-item">
-<a class="nav-link page-scroll" href="#analysis">
-Research
-</a>
-</li>
-<li class="nav-item">
-<a class="nav-link page-scroll" href="#services">
-Services
-</a>
-</li>
-<li class="nav-item">
-<a class="nav-link page-scroll" href="#artworks">
-Media
-</a>
-</li>
-<li class="nav-item">
-<a class="nav-link page-scroll" href="#partners">
-Partners
-</a>
-</li>
-<li class="nav-item">
-<a class="nav-link page-scroll" href="#company">
-Company
-</a>
-</li>
-<li class="nav-item">
-<a class="nav-link page-scroll" href="#community">
-Community
-</a>
-</li>
-<li class="nav-item">
-<a class="nav-link page-scroll" href="#participate">
-Participate
-</a>
-</li>
-<li class="nav-item">
-<a class="nav-link page-scroll" href="#contact">
-Contact
-</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="https://www.microsofttranslator.com/bv.aspx?from=&to=pt&a=https%3A%2F%2Fecumenic.github.io">
-Translate
-</a>
-</li>
-</ul>
+</div>
+<!-- FOOTER CODA -->
 <div align="right">
 <i>❤ All praises and glories to God.</i>
 </div>
