--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 <!-- DONORBOX SCRIPT -->
 <script src="https://donorbox.org/install-popup-button.js" type="text/javascript" defer></script>
 <script> window.DonorBox = { widgetLinkClassName: 'custom-dbox-popup' } </script>
+<!-- SHARE BUTTON SCRIPT -->
+<script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property=5c75f7addf6421001143aeb4&product=sticky-share-buttons' async='async' style="-webkit-filter:grayscale(100%);filter:grayscale(100%)"></script>
 <!-- HEAD CODA -->
 </head>
 <body background="./img/bg.png">
@@ -2238,7 +2240,7 @@ Donate To Our Project
 Crowdsourcing
 </h2>
 <p class="section-subtitle">
-Help us anyway you can feeling awesome.
+Follow our <a href="#community" class="page-scroll">community media</a>, help us anyway you can feeling awesome, and <a href="#modal-container-22" role="button" data-toggle="modal">join our mailing list</a>.
 </p>
 </div>
 <!-- CONTRACT -->
@@ -2706,6 +2708,14 @@ Collaborations We Need:
 <!-- CROWDSOURCING CODA -->
 </div>
 </div>
+<br><br>
+<a class="btn btn-common btn-effect page-scroll" href="#community" role="button">
+Follow Our Community Media
+</a>
+&nbsp&nbsp
+<a class="btn btn-common btn-effect" href="#modal-container-22" role="button" data-toggle="modal">
+Subscribe To Our Mailing List
+</a>
 <br><br>
 </div>
 </section>
