--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
 <script src="https://donorbox.org/install-popup-button.js" type="text/javascript" defer></script>
 <script> window.DonorBox = { widgetLinkClassName: 'custom-dbox-popup' } </script>
 <!-- SHARE BUTTON SCRIPT -->
-<script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property=5c75f7addf6421001143aeb4&product=sticky-share-buttons' async='async' style="-webkit-filter:grayscale(100%);filter:grayscale(100%)"></script>
+<script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property=5c75f7addf6421001143aeb4&product=sticky-share-buttons' async='async'></script>
 <!-- HEAD CODA -->
 </head>
 <body background="./img/bg.png">
-
 <!-- MENU -->
 <header id="slider-area">  
 <nav class="navbar navbar-expand-md fixed-top scrolling-navbar bg-white">
@@ -2974,6 +2973,7 @@ Ecumenic Creative Operations
 <script src="js/jquery.magnific-popup.min.js"></script>    
 <script src="js/waypoints.min.js"></script>    
 <script src="js/main.js"></script>
+<div class="button share-button facebook-share-button">share</div>
 </body>
 
 </html>
