--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <script src="https://donorbox.org/install-popup-button.js" type="text/javascript" defer></script>
 <script> window.DonorBox = { widgetLinkClassName: 'custom-dbox-popup' } </script>
 <!-- SHARE BUTTON SCRIPT -->
-<script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property=5c75f7addf6421001143aeb4&product=sticky-share-buttons' async='async'></script>
+<script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5c75f7addf6421001143aeb4&product=custom-share-buttons"></script>
 <!-- HEAD CODA -->
 </head>
 <body background="./img/bg.png">
@@ -378,7 +378,7 @@ Next
 </div>  
 </header>
 <!-- // Presentation Carousel End--> 
-
+<div class="button share-button">SHARE</div>
 <!-- VIDEO -->
 <section id="trailer" class="video-promo section" style="background-attachment:fixed">
 <div class="overlay">
